log
Tue 11 Apr 2023 02:13:55 AM UTC: 
 tests:  0|6
total_score: 0/70
f227a6d
Fri 14 Apr 2023 02:00:18 AM UTC: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:19: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   60 |   newMap->current = NULL;
      |                   ^
hashmap.c:61:16: error: assignment to ‘long int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   61 |   newMap->size = NULL;
      |                ^
cc1: all warnings being treated as errors
Compilation failed
9b296b8
Fri 14 Apr 2023 02:00:50 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
cd17ed0
Fri 14 Apr 2023 02:13:17 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
c9aaf82
Fri 14 Apr 2023 02:39:44 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
2fefb9b
Fri 12 May 2023 06:48:24 PM UTC: 
 hashmap.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:44:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   44 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
6c46929
Fri 12 May 2023 06:49:46 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
25340d7
Fri 12 May 2023 06:51:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
392f809
Fri 12 May 2023 06:54:58 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  1|5
total_score: 10/70
4b7747a
Fri 12 May 2023 06:57:18 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
a812ee7
Sat 13 May 2023 11:28:39 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:3: error: ‘pos’ undeclared (first use in this function); did you mean ‘pow’?
   88 |   pos = hash(key, map->capacity);
      |   ^~~
      |   pow
hashmap.c:88:3: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
1e6a3d5
Sat 13 May 2023 11:36:57 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:88:7: error: unused variable ‘pos’ [-Werror=unused-variable]
   88 |   int pos = hash(key, map->capacity);
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
f69a0f1
Sat 13 May 2023 11:37:05 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
999cc61
Sun 14 May 2023 02:12:00 AM UTC: 
 hashmap.c | 12 +++++++++---
 1 file changed, 9 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:98:36: error: expected ‘;’ before ‘}’ token
   98 |     pos = (pos + 1) % map->capacity
      |                                    ^
      |                                    ;
   99 |   }
      |   ~                                 
Compilation failed
4b46f23
Sun 14 May 2023 02:12:21 AM UTC: 
 hashmap.c | 6 +-----
 1 file changed, 1 insertion(+), 5 deletions(-)
 tests:  8|3
total_score: 40/70
590436c
Sun 14 May 2023 02:17:27 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:83:9: error: unused variable ‘buscado’ [-Werror=unused-variable]
   83 |   Pair* buscado = searchMap( map, key);
      |         ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
3f5c5f9
Sun 14 May 2023 02:17:57 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  8|3
total_score: 40/70
6aabeae
Sun 14 May 2023 02:18:20 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:88:3: error: expected ‘;’ before ‘}’ token
   88 |   }
      |   ^
Compilation failed
27426f8
Sun 14 May 2023 02:18:26 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
9461bb1
Sun 14 May 2023 02:18:42 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|2
total_score: 50/70
69038fd
Mon 15 May 2023 01:59:17 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:109:7: error: unused variable ‘pos’ [-Werror=unused-variable]
  109 |   int pos = 0;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
cec023b
Mon 15 May 2023 02:00:27 AM UTC: 
 hashmap.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|2
total_score: 50/70
154973a
Mon 15 May 2023 02:02:49 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:115:12: error: comparison between pointer and integer [-Werror]
  115 |     if(pos >= map)
      |            ^~
cc1: all warnings being treated as errors
Compilation failed
9deb51e
Mon 15 May 2023 02:03:25 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
80da7ba
Mon 15 May 2023 02:03:40 AM UTC: 
 hashmap.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:121:1: error: control reaches end of non-void function [-Werror=return-type]
  121 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
c8ccc26
Mon 15 May 2023 02:05:45 AM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
f77c9c0
Mon 15 May 2023 02:06:45 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
5e4a4d0
Mon 15 May 2023 02:09:51 AM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
97e437d
Mon 15 May 2023 02:12:39 AM UTC: 
 hashmap.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:127:14: error: initialization of ‘int’ from ‘HashMap *’ {aka ‘struct HashMap *’} makes integer from pointer without a cast [-Werror=int-conversion]
  127 |   int  pos = map + 1;
      |              ^~~
hashmap.c:127:8: error: unused variable ‘pos’ [-Werror=unused-variable]
  127 |   int  pos = map + 1;
      |        ^~~
cc1: all warnings being treated as errors
Compilation failed
006099e
Mon 15 May 2023 02:12:47 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
3bb0ab7
Mon 15 May 2023 02:36:29 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:127:14: error: initialization of ‘int’ from ‘HashMap *’ {aka ‘struct HashMap *’} makes integer from pointer without a cast [-Werror=int-conversion]
  127 |   int  pos = map + 1;
      |              ^~~
cc1: all warnings being treated as errors
Compilation failed
ea2d6e3
Mon 15 May 2023 02:36:48 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
4cd498f
Mon 15 May 2023 02:38:47 AM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  13|2
total_score: 50/70
e83dbdc
Mon 15 May 2023 02:39:37 AM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  13|2
total_score: 50/70
c7b8116
Mon 15 May 2023 02:40:06 AM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  14|2
total_score: 50/70
c33bb05
Mon 15 May 2023 02:40:26 AM UTC: 
 hashmap.c | 4 ----
 1 file changed, 4 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘nextMap’:
hashmap.c:141:1: error: control reaches end of non-void function [-Werror=return-type]
  141 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
797d83e
Mon 15 May 2023 02:41:17 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  16|1
total_score: 60/70
5e5a7d6
Mon 15 May 2023 02:44:43 AM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘enlarge’:
hashmap.c:65:11: error: unused variable ‘oldBuckets’ [-Werror=unused-variable]
   65 |   Pair ** oldBuckets = map->buckets;
      |           ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
f76b3e7
